fix: use ty in CI and satisfy ruff import sorting

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Run lints
         run: |
           uv run ruff check .
-          uv run mypy quercle
+          uv run ty check
 
       - name: Build package
         run: uv build
